<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="choose_a_hymn">Choose a hymn</string>
    <string name="okay">Okay</string>
    <string name="preview_hymn">Preview Hymn Choice</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="end_time_txt">End time:</string>
    <string name="ramdomize">Randomize</string>
    <string name="up_to">up to</string>
    <string name="add">Add</string>
    <string name="delete">Remove</string>
    <string name="move">Move:</string>
    <string name="prelude_edit_title">Add Preludes</string>
    <string name="add_song_fragment_title">Add Song</string>
    <string name="album">Album:</string>
    <string name="cancel">Cancel</string>
    <string name="preview">Preview:</string>

</resources>
