<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OverviewActy$HymnChoice"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_a_hymn"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/chooser_header_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:imeOptions="actionDone"
        android:id="@+id/hymnNumber"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true" >
        <requestFocus />
    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview_hymn"
        android:id="@+id/preview_checkbox"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:id="@+id/okay_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hymnList"
        android:layout_below="@+id/hymnNumber"
        android:layout_above="@id/okay_button"
        android:choiceMode="singleChoice"
        android:layout_alignParentStart="true" />

</RelativeLayout>
