<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prelude_edit_title"
        android:id="@+id/prelude_title_str"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_time_txt"
        android:id="@+id/end_time_txt"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prelude_title_str"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:clickable="true"
        android:id="@+id/end_time"
        android:layout_alignParentTop="false"
        android:layout_toEndOf="@+id/end_time_txt"
        android:layout_alignBaseline="@+id/end_time_txt"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:background="@color/dark_bkg" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prelude_list"
        android:layout_below="@+id/end_time_txt"
        android:layout_alignParentStart="true"
        android:background="@color/dark_bkg"
        android:layout_above="@+id/preview_frame"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/preview_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/affect_list"
        android:layout_alignParentStart="true"
        android:background="@color/dark_bkg">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_pause"
            android:background="@android:drawable/ic_media_play"
            android:layout_margin="4dp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:id="@+id/okay_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ramdomize"
        android:id="@+id/randomize_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/up_to"
        android:id="@+id/upto"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/randomize_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_alignBaseline="@+id/randomize_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:clickable="true"
        android:id="@+id/up_to_time"
        android:layout_toEndOf="@+id/upto"
        android:layout_alignBaseline="@+id/upto"
        android:background="@color/dark_bkg" />
        -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/affect_list"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_above="@+id/okay_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add_btn"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/remove_btn"
            android:layout_toEndOf="@+id/add_btn"
            android:layout_alignTop="@+id/add_btn"
            android:layout_alignBottom="@+id/add_btn"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/move"
            android:id="@+id/move_text"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/updown"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/move_up"
                android:src="@android:drawable/arrow_up_float" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/move_down"
                android:src="@android:drawable/arrow_down_float" />

        </LinearLayout>

        <Space
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0:00"
            android:id="@+id/total_time"
            android:minEms="3"
            android:layout_gravity="top|right"
            android:gravity="end" />

    </LinearLayout>

</RelativeLayout>
